Fix mobile navbar overlap

--- a/src/stylesheets/all.css
+++ b/src/stylesheets/all.css
@@ -462,12 +462,12 @@ section {
  */
 
 body {
-    padding-top:30px
+    padding-top: var(--site-nav-offset, 56px)
 }
 
 @media only screen and (min-width: 500px) {
     body {
-        padding-top:70px
+        padding-top: var(--site-nav-offset, 70px)
     }
 }
 
